syntax = "proto3";

import "google/protobuf/empty.proto";

package application;

message GetApplicationArgs {
  int32 orderId = 1;
}

message Application {
  int32 id = 1;
  int32 orderId = 2;
  int32 sitterId = 3;
}

message Error {
  string code = 1;
  string message = 2;
}

message CreateResult {
  optional Application data = 1;
  optional Error _error = 100;
}

message GetResult {
  repeated Application data = 1;
  optional Error _error = 100;
}

message CancelApplicationArgs {
  int32 id = 1;
}

message Empty {
  google.protobuf.Empty data = 1;
  optional Error _error = 100;
}

service OrderApplicationRpcService {
  rpc create (Application) returns (CreateResult);
  rpc getApplicationsForOrder (GetApplicationArgs) returns (GetResult);
  rpc cancelOrderApplication (CancelApplicationArgs) returns (Empty);
}